using MyInterface;

namespace MyClass;

class Domino : IDomino
{
    public byte PipLeft { get; set; }
    public byte PipRight { get; set; }
}