namespace MyInterface;

interface IDomino
{
    public byte PipLeft { get; set; }
    public byte PipRight { get; set; }
}