---
title: Domino Boardgame
---

classDiagram
    IDomino <|-- Domino
    IDeck <|-- Deck
    IPlayer <|-- Player
    IBoard <|-- Board

    class IDomino {
        <<Interface>>
        +byte PipLeft
        +byte PipRight
    }
    class Domino {
        +byte NumberTop
        +byte NumberBottom
        +Domino(byte numberTop, byte numberBottom)
    }

    class IDeck {
        <<Interface>>
        +List~Domino~ Dominos
    }
    class Deck {
        +List~Domino~ Dominos
    }
    class IPlayer {
        <<Interface>>
        +string Name
        +int Score
        +PlaceDomino(IDomino domino)
        +TakeDomino(IDomino domino)
    }

    class Player {
        +string Name
        +int Score
        +Player(string name)
        +PlaceDomino(IDomino domino)
        +TakeDomino(IDomino domino)
    }

    class IBoard {
        <<Interface>>
        +List~Domino~ Dominos
    }
    class Board {
        +List~Domino~ dominos
    }

    class Game {
        -List~IPlayer~ players
        -IBoard _board
        -IDeck _deck
        -int CurrentTurnIndex
        +Game(List~IPlayer~ players, IBoard board, IDeck deck)
    }